<resources>
    <string name="app_name">DummyProducts</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login_in">Войти</string>

<!--    Menu-->
    <string name="menu_item_all_products">Все продукты</string>
    <string name="menu_item_user_products">Мои продукты</string>
    <string name="menu_item_exit_account">Выход</string>

<!--    Toasts-->
    <string name="toast_empty_field">Введите значение!</string>
    <string name="toast_successful_login">Успешная авторизация!</string>
    <string name="toast_error_login">Ошибка авторизации!</string>

<!--    Dialogs-->
    <string name="dialog_login_title">Авторизация</string>
    <string name="dialog_login_message">Подождите, идет процесс авторизации...</string>

<!--    Titles-->
    <string name="title_login">Авторизация</string>
    <string name="title_user_account">Аккаунт</string>
    <string name="title_user_products">Мои продукты</string>
    <string name="title_all_products">Все продукты</string>
</resources>